# machine-learning-library

./: .gitignore  CMakeLists.txt  README.md
cmake/: mllConfig.cmake.in
examples/: CMakeLists.txt  hello_mll.cpp
include/: base_network.h  matrix.h  multi_layer_perceptron.h  single_layer_perceptron.h
include/NeuralNetwork/: Matrix.h  NeuralNetwork.h
include/mll/classical/: linear_regression.hpp  logistic_regression.hpp  svm.hpp
include/mll/core/: dataset.hpp  model.hpp  serialization.hpp
include/mll/ensemble/: gradient_boosting.hpp  random_forest.hpp
include/mll/loss/: cross_entropy.hpp  loss.hpp  mse.hpp
include/mll/math/: matrix.hpp  tensor.hpp
include/mll/nn/: activations.hpp  layer.hpp  utils.hpp
include/mll/nn/layers/: conv2d.hpp  dense.hpp  lstm.hpp
include/mll/optim/: adam.hpp  optimizer.hpp  sgd.hpp
include/models/: base_model.h
include/models/ensemble/: gradient_boosting.h  random_forest.h
include/models/knn/: knn.h
include/models/linear/: linear_regression.h  logistic_regression.h
include/models/naive_bayes/: naive_bayes.h
include/models/neural_network/: base_network.h  cnn.h  gan.h  lstm.h  multi_layer_perceptron.h  rnn.h  single_layer_perceptron.h  transformer.h
include/models/svm/: svm.h
include/models/tree/: decision_tree.h
include/models/utils/: matrix.h
src/: Main.cpp  Matrix.cpp  NeuralNetwork.cpp  base_network.cpp  multi_layer_perceptron.cpp  single_layer_perceptron.cpp
src/classical/: linear_regression.cpp  logistic_regression.cpp  svm.cpp
src/core/: dataset.cpp  model.cpp  serialization.cpp
src/ensemble/: gradient_boosting.cpp  random_forest.cpp
src/loss/: cross_entropy.cpp  loss.cpp  mse.cpp
src/math/: matrix.cpp  tensor.cpp
src/models/: base_model.cpp
src/models/ensemble/: gradient_boosting.cpp  random_forest.cpp
src/models/knn/: knn.cpp
src/models/linear/: linear_regression.cpp  logistic_regression.cpp
src/models/naive_bayes/: naive_bayes.cpp
src/models/neural_network/: autoencoder.cpp  autoencoder.h  base_network.cpp  cnn.cpp  gan.cpp  lstm.cpp  multi_layer_perceptron.cpp  rnn.cpp  single_layer_perceptron.cpp  transformer.cpp
src/models/neural_network/components/: activation.h  cnn_layer.h  layer.h  loss.h  optimizer.h
src/models/svm/: svm.cpp
src/models/tree/: decision_tree.cpp
src/models/utils/: matrix.cpp
src/nn/: activations.cpp  layer.cpp  utils.cpp
src/nn/layers/: conv2d.cpp  dense.cpp  lstm.cpp
src/optim/: adam.cpp  optimizer.cpp  sgd.cpp
tests/: CMakeLists.txt  test_dummy.cpp
